<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wix</groupId>
    <artifactId>clean-tests</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <specs2.version>3.8.6</specs2.version>
        <scala.version>2.12</scala.version>
        <scala.compiler.version>2.12.1</scala.compiler.version>
        <async-http-client.version>2.0.29</async-http-client.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.asynchttpclient</groupId>
            <artifactId>async-http-client</artifactId>
            <version>${async-http-client.version}</version>
        </dependency>

        <dependency>
            <groupId>com.wix</groupId>
            <artifactId>http-testkit_${scala.version}</artifactId>
            <version>0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.2</version>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.compiler.version}</version>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-core_${scala.version}</artifactId>
            <version>${specs2.version}</version>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.specs2</groupId>-->
        <!--<artifactId>specs2-shapeless_${scala.version}</artifactId>-->
        <!--<version>${specs2.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-matcher-extra_${scala.version}</artifactId>
            <version>${specs2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-mock_${scala.version}</artifactId>
            <version>${specs2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-junit_${scala.version}</artifactId>
            <version>${specs2.version}</version>
        </dependency>


    </dependencies>

    <repositories>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <args>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                        <arg>-Xmax-classfile-name</arg>
                        <arg>240</arg>
                    </args>
                    <addJavacArgs>-deprecation</addJavacArgs>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>